@@ -24,6 +24,7 @@ import java.util.Map;
 import java.util.TimeZone;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.jar.JarFile;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -64,7 +65,7 @@ class JarIntegrationTests extends AbstractArchiveIntegrationTests {
 				.hasEntryWithNameStartingWith("BOOT-INF/lib/spring-context")
 				.hasEntryWithNameStartingWith("BOOT-INF/lib/spring-core")
 				.hasEntryWithNameStartingWith("BOOT-INF/lib/spring-jcl")
-				.hasEntryWithNameStartingWith("BOOT-INF/lib/jakarta.servlet-api-6")
+				.hasEntryWithNameStartingWith("BOOT-INF/lib/jakarta.servlet-api-4")
 				.hasEntryWithName("BOOT-INF/classes/org/test/SampleApplication.class")
 				.hasEntryWithName("org/springframework/boot/loader/JarLauncher.class");
 			assertThat(buildLog(project)).contains("Replacing main artifact with repackaged archive")
@@ -408,7 +409,7 @@ class JarIntegrationTests extends AbstractArchiveIntegrationTests {
 				List<String> unreproducibleEntries = jar.stream()
 					.filter((entry) -> entry.getLastModifiedTime().toMillis() != offsetExpectedModified)
 					.map((entry) -> entry.getName() + ": " + entry.getLastModifiedTime())
-					.toList();
+					.collect(Collectors.toList());
 				assertThat(unreproducibleEntries).isEmpty();
 				jarHash.set(FileUtils.sha1Hash(repackaged));
 				FileSystemUtils.deleteRecursively(project);
